# mazerango

./: .gitignore  MANIFEST.in  manage.py  pyproject.toml  setup.cfg
mazer/: admin.py  apps.py  models.py
mazerango/: mazerango_admin.py  settings.py
mazerango/static/admin/js/: actions.js
mazerango/static/mazerango/js/: changelist.json
mazerango/templates/admin/: app_list.html  base.html  change_form.html  change_list.html  change_list_results.html  index.html  object_history.html
mazerango/templates/admin/includes/: fieldset.html
mazerango/templatetags/: mazerango_admin_list.py  mazerango_field.py
mazerango_newdlops/: apps.py
