[metadata]
name = mazerango
version = 0.1
description = django admin template using mazer.
long_description = file: README.rst
url = https://www.example.com/
author = newdlops
author_email = newdlops@gmai.com
license = BSD-3-Clause # TBD
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 5.0
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.11
install_requires =
    Django >= 5.0  # Replace "X.Y" as appropriate
